# planner

./: .gitignore  Cargo.toml  auth_route.rsBAK  key.pkcs8  planner.sq3  planner.sq3-shm  planner.sq3-wal  scheme.drawio  sessions.sq3  sessions.sq3-shm  sessions.sq3-wal
frontend/: .env  .eslintrc.cjs  base.css  env.d.ts  index.html  package.json  pnpm-lock.yaml  router.ts  router_meta.d.ts  rsbuild.config.ts  style.css  tsconfig.json
frontend/assets/styles/: scrollable_table.scss  status_card.scss
frontend/src/: App.vue  main.ts  router.d.ts  router.ts
frontend/src/composables/: useTheme.ts
frontend/src/services/: emitter.ts
frontend/src/store/: abstract_store.ts  index.ts
frontend/src/styles/: main_grid.scss
frontend/src/types/: user_role.ts
frontend/src/views/: Login.vue
src/: auth_route.rs  configuration.rs  error.rs  main.rs  roles.rs  state.rs
src/api/: auth_api.rs  auth_middleware.rs  cookie_middleware.rs  cors.rs  mod.rs  roles.rs  router.rs  server.rs  test.http  test_api.rs  tower.rs
src/api/authorization/: mod.rs  structs.rs
src/api/http_tests/: httpie-space-local.json  login.http  update_access.http
src/db/: connection.rs  mod.rs  session_repository.rs  user_repository.rs
src/middleware/: auth_middleware.rs  cookie_middleware.rs  mod.rs  session_wrapper.rs
src/services/: jwt_service.rs  mod.rs  user_service.rs
